fixed a responsiveness bug
google button was overflowing

--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -110,6 +110,7 @@
   width: 100%;
   max-width: 420px;
   animation: slideUp 0.5s ease forwards;
+  margin-bottom: 2rem;
 }
 
 /* Form switcher */
